--- a/styles.scss
+++ b/styles.scss
@@ -81,10 +81,4 @@ button {
   }
 }
 
-@import "_settings.scss";
-@import "_utilities.scss";
-@import "_typography.scss";
-@import "_tabs.scss";
-@import "_slice.scss";
-@import "_button.scss";
-@import "_alternate.scss";
+@import "_file.scss";
