--- a/styles.scss
+++ b/styles.scss
@@ -81,4 +81,10 @@ button {
   }
 }
 
-@import "_file.scss";
+@import "_settings.scss";
+@import "_utilities.scss";
+@import "_typography.scss";
+@import "_tabs.scss";
+@import "_slice.scss";
+@import "_button.scss";
+@import "_alternate.scss";
